welcome.lessons.welcome.loopfor.LoopCourse.scala.code
var nbg=0

while(tour!=40){
	avance()
	if(estFaceMur()==true){
		gauche()
		nbg=nbg+1
	}
}